# NADF

./: .env.example  .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
data/: data
notebooks/: dataset.ipynb  inspect.ipynb  pipeline.ipynb
scripts/: evaluate_probe.py  generate_adversarial.py  sweep.yaml  train_probe.py  train_sweep.py  train_upweight.py
src/: models.py  resnet18.py  utils.py
src/nadf/: __init__.py  utils.py
src/nadf/data/: adversarial.py  datasets.py
src/nadf/evaluation/: metrics.py  plots.py
src/nadf/experiments/: upweight.py
src/nadf/models/: mlp.py
src/nadf/target_models/: classifier.py  resnet18.py
src/nadf/training/: losses.py  pipeline.py  trainer.py
